@@ -1,3 +1,5 @@
+- ADD: New option to specify the minimum size of a
+       log message. (Stefan)
 - CHG: Don't use the %APPDATA% env but the shell API to
        get the path to the config file in the settings
        dialog. (Stefan)
